# http-code-checker

./: .env.sample  README.md  main.py  pyproject.toml  schema.json  test.py
apps/api/: serializers.py  urls.py  views.py
apps/core/: urls.py  views.py
apps/core/decorators/: decorators.py
apps/infrastructure/: .admin.py.swp  admin.py  apps.py  models.py  signals.py
apps/infrastructure/migrations/: 0001_initial.py
apps/monitoring/: .models.py.swp  .signals.py.swp  admin.py  admin.py1  apps.py  comparison.py  comparison_.py  models.py  signals.py  signals_.py  signals__.py  storage.py  tasks.py  urls.py  utils.py  utils_.py  views.py
apps/monitoring/migrations/: 0001_initial.py  0002_delete_ipaddress_delete_ipclass.py  0002_ipclass_remove_ipaddress_name_ipaddress_label_and_more.py  0003_alter_ipaddress_unique_together.py  0003_alter_sitesnapshot_http_status_code_and_more.py  0004_alter_sitesnapshot_screenshot.py  0004_ipclass_auto_generate_ipclass_network.py  0005_screenshotcomparison.py  0006_alter_sitesnapshot_screenshot.py  0007_alter_sitesnapshot_options_sitesnapshot_is_baseline_and_more.py  0008_server_ip_address.py  (+8 more)
bash_scripts/: handler.sh
codechecker/: .settings.py.swp  asgi.py  settings.py  urls.py  wsgi.py
codechecker/codechecker/: settings.py
codechecker/middleware/: middleware.py
services-files/: httpcodechecker  rq  rq-default
templates/: base.html
templates/monitoring/: comparison_dashboard.html  dashboard.html  server_detail.html  server_list.html  site_detail.html  site_list.html  site_scores.html
templates/registration/: login.html
(+3 files in other folders)
