[project]
name = "http-code-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apprise>=1.9.7",
    "bs4>=0.0.2",
    "cv2-tools>=2.4.0",
    "django>=4.2.28",
    "django-admin-interface>=0.32.0",
    "django-cleanup>=9.0.0",
    "django-rq>=3.2.2",
    "djangorestframework>=3.16.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pillow>=11.3.0",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "redis>=7.2.1",
    "requests>=2.32.5",
    "rq>=2.7.0",
    "scikit-image>=0.26.0",
]
